correcting js to recollapse text

--- a/spins.fedoraproject.org/static/css/spins.fedora.css
+++ b/spins.fedoraproject.org/static/css/spins.fedora.css
@@ -403,7 +403,7 @@ body
    margin-top: 4em;
    color: #aaa;
 }
-.export-regulations .read-more img, .export-regulations .details img { margin: 0; }
+.export-regulations .read-more img, .export-regulations .description img { margin: 0; }
 .export-regulations .description { display: inline; }
 .export-regulations a { text-decoration: none; color: #aaa; }
 .export-regulations h4 { font-size: small; color: #aaa; }
